# cvc_cli

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
cv_cli/: __init__.py
cv_cli/cli/: convert.py  stereo.py
cv_cli/convert/: __init__.py  convert.py
cvc_cli/: __init__.py
cvc_cli/cli/: convert.py  mono.py  stereo.py
cvc_cli/convert/: __init__.py
cvc_cli/mono/: calibration.py
cvc_cli/stereo/: calibration.py  pattern_maker.py  utils.py
scripts/: cv-convert  cv-stereo
