[tool.poetry]
name = "cv-cli"
version = "0.1.0"
description = ""
authors = ["Cristhian"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
opencv-python = "^4.5.2"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
jupyterlab = "^3.0.16"

[tool.poetry.scripts]
cvc-convert ="cv_cli.cli.convert:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
